# codonforge

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_benchmark.yml
.github/workflows/: ci.yml
data/: README.md  codon_usage_freq_table_human.csv  kazusa-homo-sapiens-codon-usage.txt
docs/: rl-research-start.md  v1-beam-search-design.md
examples/: README.md
examples/benchmark/: README.md  run.sh
examples/benchmark/expected/: rho_beam.txt  rho_greedy.txt
examples/benchmark/targets/: prpf31.fasta  rho.fasta  rpe65.fasta  rpgr-orf15.fasta
examples/rho/: README.md  run.sh
examples/rl/: README.md  input.fasta  python_loop.py  run.sh
examples/toy/: expected_output.txt  run.sh
paper/: paper.bib  paper.md
src/: cai.rs  codon.rs  fasta.rs  main.rs  optimize.rs  output.rs
tests/: cli.rs
