[package]
name = "codonforge"
version = "0.1.0"
edition = "2021"
description = "CodonForge v0 — a Rust CLI for codon optimization of protein-coding sequences"
license = "MIT"
repository = "https://github.com/raghuboi/codonforge"
readme = "README.md"
keywords = ["bioinformatics", "codon", "optimization", "mrna", "translation"]
categories = ["command-line-utilities", "science::bioinformatics"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
