[package]
name = "codonforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Clean-room Rust CLI for protein-faithful mRNA codon optimization research"
license = "MIT"
repository = "https://github.com/raghuboi/codonforge"
readme = "README.md"
keywords = ["bioinformatics", "codon", "optimization", "mrna", "translation"]
categories = ["command-line-utilities", "science::bioinformatics"]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/data",
  "/paper",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CITATION.cff",
  "/CODE_OF_CONDUCT.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
